add sample that runs from jpackaged app (#43)
* add sample that runs from jpackaged app

some features, e.g., macOS notifications don't work without a propper application bundle

* every task should write to its own directory

* make jpackage friendly for other platforms

* rename task because it's in pipeline not only on windows

* take only one copy of angle